# bokeh-interactive-example

./: .flake8  README.md  example_custom_js.html  pyproject.toml
notebook/: example_custom_js.ipynb  example_ipywidgets.ipynb  example_python_callback.ipynb
src/: example_custom_js.py  example_python_callback.py  utils.py
