[tool.poetry]
name = "bokeh-interactive-example"
version = "0.1.0"
description = ""
authors = ["satorin1204 <sato1204rin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
pandas = "^1.3.3"
networkx = "^2.6.3"
bokeh = "2.3.1"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
